2018-09-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2018-09-13  Radford Neal  <radfordneal@gmail.com>

	* src/pmurhash.c (DOBYTES): Explicit cast to uint32_t avoids UBSAN

2018-09-13  Jim Hester  <james.f.hester@gmail.com>

	* src/xxhash.c: Updated to use xxHash v0.6.5
	* src/xxhash.h: Ditto
	* src/digest.c: Ditto

2018-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.6.17

2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Simplified as covr can be installed from c2d4u

2018-08-30  Radford Neal  <radfordneal@gmail.com>

	* src/sha2.c: Memory alignment changes motivated by 32bit sparc
	* src/sha2.h: Ditto

2018-08-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.6.16

2018-08-20  Dirk Eddelbuettel  <edd@debian.org>

	* tests/digestTest.Rout: Skip one test which creates different
	results across versions and operating systems
	* tests/digestTest.Rout.save: Ditto

2018-08-19  Dirk Eddelbuettel  <edd@debian.org>

	* tests/hmacTest.R: Added raw test
	* tests/hmacTest.Rout.save: Updated reference output accordingly

	* tests/raw.R: Added test for 'raw' vector input to sha1()

	* R/sha1.R: Removed no longer needed #nocov tags

2018-07-21  Henrik Bengtsson  <hb@aroma-project.org>

	* DESCRIPTION: digest (>= 0.6.14) requires R (>= 3.0.3)

2018-06-30  Dirk Eddelbuettel  <edd@debian.org>

	* tests/crc32.R: Added test for crc32 and old versus new formats
	* tests/raw.R: Added small test file for raw tests

2018-06-29  Dirk Eddelbuettel  <edd@debian.org>

	* R/init.R: Provide option 'digestOldCRC32Format' which if TRUE
	returns without zero padding which can be shorter than eight bytes
	* R/digest.R: If crc32 selected and option set, return in old format
	* man/digest.Rd: Document new option

2018-06-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/digest.c (digest): Change print format for crc32 to always